--- a/nuestra historia.html
+++ b/nuestra historia.html
@@ -77,14 +77,19 @@
             </div>
         </div>
     </nav>
-    <div class="container overflow-hidden text-center">
+
+    <div class="container text-center">
+        <div class="col"> <img src="logos/logo redondopara pagina.png" alt="logo RunaPacha">
+        </div>
+
+    <div class="container overflow-hidden text-center"> 
         <div class="row gx-5">
             <div class="col">
                 <div class=" p-3 border bg-light">
                     <h2> Una historia </h2>
                     <p> Esta "ave" tomo vuelo en el 2016, aunque su fundador, Daniel, lleva metido en el mundo de los
                         libros desde larga data.
-                        Pense, quizas seria mas interesente comenzar por ahi para contar estos inicios.
+                        Pense, quizas seria mas interesante comenzar por ahi para contar estos inicios.
                         Trabajando en distintas revistas como cadete, continuo ese recorrido hasta llegar a editoriales
                         y escalar, convirtiendose en
                         representante de las mismas.</p>
@@ -119,7 +124,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
         <footer class="text-center"> Libreria RunaPacha - GBA Banfield Zona Sur, envios a todo el pais. CUIT
             XX-XXXXXXXX-X
         </footer>
